syntax = "proto3";

package main;

option go_package = "/main";

message Log {
    string name = 1;
    string data = 2;
}

message LogRequest {
    Log logEntry = 1;
}

message LogResponse {
    string result = 1;
}

service LogService {
    rpc WriteLog(LogRequest) returns (LogResponse);
}
